Fixed Input-box color to Black

--- a/src/styles/components/calculator.scss
+++ b/src/styles/components/calculator.scss
@@ -21,6 +21,7 @@
     outline: none;
     border: 2px solid var(--color-black);
     border-radius: var(--border-round);
+    color: var(--color-black);
   }
 
   &__button {
