--- a/src/styles/components/calculator.scss
+++ b/src/styles/components/calculator.scss
@@ -19,6 +19,7 @@
     padding: 0.5rem 1rem;
     font-size: 1.5rem;
     outline: none;
+    color: var(--color-black);
     border: 2px solid var(--color-black);
     border-radius: var(--border-round);
   }
